--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 	<header>
-		<div id="logo"><img src="/pro-life_banner.png">HTML5&nbsp;Layout</div>
+		<div id="logo"><img src="/pro-life_banner.png">Pro-life Hamilton</div>
 		<nav>  
 			<ul>
 				<li><a href="/">Home</a>
