--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <body>
 	<header>
-		<div id="logo"><img src="/pro-life_banner.png">Pro-life Hamilton</div>
+		
+		<img src="/pro-life_banner.png">
 		<nav>  
 			<ul>
 				<li><a href="/">Home</a>
