--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Responsive HTML5 Page Layout Template</title>
     <meta name="description" content="Pro-life Hamilton">
     <link rel="stylesheet" href="style.css">
-
+    <script src="script.js"></script>
 </head>
 
 <body>
