--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://html5-templates.com/" />
-    <title>Responsive HTML5 Page Layout Template</title>
+    <title>Pro-life Hamilton</title>
     <meta name="description" content="Pro-life Hamilton">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
@@ -18,14 +18,14 @@
 		<nav>  
 			<ul>
 				<li><a href="/">Home</a>
-				<li><a href="https://html-css-js.com/">HTML</a>
-				<li><a href="https://html-css-js.com/css/code/">CSS</a>
-				<li><a href="https://htmlcheatsheet.com/js/">JS</a>
+				<li><a href="https://html-css-js.com/">Information</a>
+				<li><a href="https://html-css-js.com/css/code/">Pictures</a>
+				<li><a href="https://htmlcheatsheet.com/js/">Contact</a>
 			</ul>
 		</nav>
 	</header>
 	<section>
-		<strong>Demonstration of a simple page layout using HTML5 tags: header, nav, section, main, article, aside, footer, address.</strong>
+		<strong>A voice for the unborn!</strong>
 	</section>
 	<section id="pageContent">
 		<main role="main">
