--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 	<header>
 		
-		<img src="/pro-life_banner.png">
+		<img src="/pro-life_banner-cropped.png">
 		<nav>  
 			<ul>
 				<li><a href="/">Home</a>
