--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Pro-life Hamilton</title>
     <meta name="description" content="Pro-life Hamilton">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="website-icon.png" type="image/x-icon">
     <script src="script.js"></script>
 </head>
 
