--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 	<header>
 		
-		<img src="/pro-life_banner-cropped.png">
+		<img src="/pro-life_banner-cropped.png" class="center">
 		<nav>  
 			<ul>
 				<li><a href="/">Home</a>
