--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 	<header>
 		
 		<img src="/pro-life_banner-cropped.png" class="center">
+	</header>
+	<header>
 		<nav>  
 			<ul>
 				<li><a href="/">Home</a>
