--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
 </head>
 
 <body>
-	<header>	
+	<header>
+		.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 		<img src="/pro-life_banner-cropped.png" class="center">
 	</header>
 	<header>
