--- a/index.html
+++ b/index.html
@@ -15,7 +15,26 @@
 <body>
 	<header>
 		
-		<img src="/pro-life_banner-cropped.png" class="center">
+		
+		   <style>
+      .box {
+        width: 30%;
+        height: 200px;
+        border: 5px dashed #f7a239;
+      }
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="box">
+	    		<img src="/pro-life_banner-cropped.png" class="center"/>
+
+    </div>
+  </body>
+	
 	</header>
 	<header>
 		<nav>  
