--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <div class="box">
-	    		<img src="/pro-life_banner-cropped.png" class="center"/>
+	    		<img src="/pro-life_banner-cropped.png" class="center">
 
     </div>
   </body>
