--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 		</aside>
 	</section>
 	<footer>
-		<p>&copy; Website template taken from | <a href="https://html5-templates.com/" target="_blank" rel="nofollow">HTML5 Templates</a></p>
+		<p>Website template taken from <a href="https://html5-templates.com/" target="_blank" rel="nofollow">HTML5 Templates</a></p>
 		<address>
-			Contact: <a href="mailto:prolifehamilton@protonmail.com">email</a>
+			Contact: <a href="mailto:prolifehamilton@protonmail.com">prolifehamilton@protonmail.com</a>
 		</address>
 	</footer>
 
