--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		</nav>
 	</header>
 	<section>
-		<strong>A voice for the unborn!</strong>
+		<strong>A voice for the unborn!!</strong>
 	</section>
 	<section id="pageContent">
 		<main role="main">
