--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     		</style>
   		<body>
     			<div class="box">
-	    			<img src="/pro-life_banner2.png" class="center">
+	    			<img src="/pro-life-banner.png" class="center">
 		    	</div>
   		</body>
 	</header>
