--- a/index.html
+++ b/index.html
@@ -15,15 +15,7 @@
 <body>
 	
 	<header>
-		<style>
-      		.box {
-        		width: 100%;
-      		}
-      		img {
-        		width: 100%;
-        		height: 100%; 
-      		}
-    		</style>
+
   		<body>
     			<div class="box">
 	    			<img src="/pro-life-banner.png" class="center">
@@ -31,6 +23,7 @@
   		</body>
 	</header>
 	
+	<!-- TODO make other pages work
 	<header>
 		<nav>  
 			<ul>
@@ -41,12 +34,26 @@
 			</ul>
 		</nav>
 	</header>
+        -->
+	
+	<style>
+      		.box2 {
+        		width: 70%;
+      		}
+      		img {
+        		width: 100%;
+        		height: 100%; 
+      		}
+    	</style>
 	
 	<section id="pageContent">
 		<main role="main">
 			<article>
-				<h2>Stet facilis ius te</h2>
-				<p>Lorem ipsum dolor sit amet, nonumes voluptatum mel ea, cu case ceteros cum. Novum commodo malorum vix ut. Dolores consequuntur in ius, sale electram dissentiunt quo te. Cu duo omnes invidunt, eos eu mucius fabellas. Stet facilis ius te, quando voluptatibus eos in. Ad vix mundi alterum, integre urbanitas intellegam vix in.</p>
+				<h2>Deliver C-233 bronchures to Hamilton homes</h2>
+				<p>Currently 1000 have to delivered.</p>
+				<div class="box">
+	    				<img src="/defend-girls.png" class="center">
+		    		</div>
 			</article>
 			<article>
 				<h2>Illud mollis moderatius</h2>
