--- a/index.html
+++ b/index.html
@@ -40,10 +40,7 @@
       		.box2 {
         		width: 70%;
       		}
-      		img {
-        		width: 100%;
-        		height: 100%; 
-      		}
+      		
     	</style>
 	
 	<section id="pageContent">
@@ -52,7 +49,7 @@
 				<h2>Deliver C-233 bronchures to Hamilton homes</h2>
 				<p>Currently 1000 have to delivered.</p>
 				<div class="box">
-	    				<img src="/defend-girls.png" class="center">
+	    				<img src="/defend_girls.png" class="center">
 		    		</div>
 			</article>
 			<article>
