--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		<main role="main">
 			<article>
 				<h2>Deliver C-233 bronchures to Hamilton homes</h2>
-				<p>Currently 1000 have to delivered.</p>
+				<p>Currently 1000 have been delivered.</p>
 				<div class="box">
 	    				<img src="/defend_girls.png" class="center">
 		    		</div>
