--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<article>
 				<h2>Deliver C-233 bronchures to Hamilton homes</h2>
 				<p>Currently 1000 have been delivered.</p>
-				<div class="box">
+				<div class="box2">
 	    				<img src="/defend_girls.png" class="center">
 		    		</div>
 			</article>
