--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
 
 <body>
 	
+	<style>
+      		.box {
+			padding: 10px 0px;
+        		width: 70%;
+      		}
+		img {
+			width: 100%;
+  			height: 100%;
+		}
+      		
+    	</style>
 	<header>
 
   		<body>
