--- a/index.html
+++ b/index.html
@@ -14,22 +14,17 @@
 
 <body>
 	
-	<style>
-      		.box {
-        		width: 100%;
-      		}
-		img {
-			width: 100%;
-  			height: 100%;
-		}
-      		
-    	</style>
+	
 	<header>
 
   		<body>
-    			<div class="box">
+			
+  width: 100%;
+  height: 100%;
+
+    			<!--<div class="box">-->
 	    			<img src="/pro-life-banner.png" class="center">
-		    	</div>
+		    	<!--</div>-->
   		</body>
 	</header>
 	
