--- a/index.html
+++ b/index.html
@@ -16,15 +16,21 @@
 	
 	
 	<header>
-
+	<style>
+      		.box {
+        		width: 100%;
+      		}
+		img {
+			width: 100%;
+  			height: 100%;
+		}
+    	</style>
+		
   		<body>
-			
-  width: 100%;
-  height: 100%;
-
-    			<!--<div class="box">-->
+		
+    			<div class="box">
 	    			<img src="/pro-life-banner.png" class="center">
-		    	<!--</div>-->
+		    	</div>
   		</body>
 	</header>
 	
