--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 		    		</div>
 			</article>
 			<article>
-				<h2>Illud mollis moderatius</h2>
-				<p>Eum facete intellegat ei, ut mazim melius usu. Has elit simul primis ne, regione minimum id cum. Sea deleniti dissentiet ea. Illud mollis moderatius ut per, at qui ubique populo. Eum ad cibo legimus, vim ei quidam fastidii.</p>
+				<h2>Get petitions signed in support of C-233</h2>
+				<p>Currently we have 180 signatures.</p>
 			</article>
 			<article>
 				<h2>Ex ignota epicurei quo</h2>
