--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	
 	<header>
 	<style>
-      		.box {
+      		.banner {
         		width: 100%;
       		}
 		img {
@@ -28,7 +28,7 @@
 		
   		<body>
 		
-    			<div class="box">
+    			<div class="banner">
 	    			<img src="/pro-life-banner.png" class="center">
 		    	</div>
   		</body>
@@ -61,13 +61,16 @@
 			<article>
 				<h2>Deliver C-233 bronchures to Hamilton homes</h2>
 				<p>Currently 1000 have been delivered.</p>
-				<div class="box2">
+				<div class="box">
 	    				<img src="/defend_girls.png" class="center">
 		    		</div>
 			</article>
 			<article>
 				<h2>Get petitions signed in support of C-233</h2>
 				<p>Currently we have 180 signatures.</p>
+				<div class="box">
+	    				<img src="/c-233-petition.png" class="center">
+		    		</div>
 			</article>
 			<article>
 				<h2>Ex ignota epicurei quo</h2>
