--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
 				<h2>Get petitions signed in support of C-233</h2>
 				<p>Currently we have 180 signatures.</p>
 				<div class="box">
-	    				<img src="/c-233-petition.png" class="center">
-		    		</div>
+				 	<a href="https://docs.google.com/forms/d/e/1FAIpQLSdCK-jsO5aHyPRnLotl2B2710aKwor-knma7SnKfJ-CXAY1aA/viewform">
+  						<img src="/c-233-petition.png">
+					</a> 
+				</div>
 			</article>
 			<article>
 				<h2>Ex ignota epicurei quo</h2>
