--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
 				<h2>Deliver C-233 bronchures to Hamilton homes</h2>
 				<p>Currently 1000 have been delivered.</p>
 				<div class="box">
-	    				<img src="/defend_girls.png" class="center">
+					<a href="https://docs.google.com/forms/d/e/1FAIpQLSdCK-jsO5aHyPRnLotl2B2710aKwor-knma7SnKfJ-CXAY1aA/viewform">
+	    					<img src="/defend_girls.png">
+					</a>
 		    		</div>
 			</article>
 			<article>
