--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<header>
 	<style>
       		.banner {
+			padding: 20px 0px;
         		width: 100%;
       		}
 		img {
@@ -33,7 +34,7 @@
 		    	</div>
   		</body>
 	</header>
-	<h1>What do we do?</h1>
+	<h1 style="color:#b04bc0">What do we do?</h1>
 	
 	<!-- TODO make other pages work
 	<header>
