--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   		<body>
 		
     			<div class="banner">
-	    			<img src="/pro-life-banner.png" class="center">
+	    			<img src="/pro-life-banner.png">
 		    	</div>
   		</body>
 	</header>
