--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
 		    	</div>
   		</body>
 	</header>
+	
+	
+	<style>
+      		h1 {
+        		text-indent: 20px;
+        	}
+	</style>
+	
 	<h1 style="color:#b04bc0">What do we do?</h1>
 	
 	<!-- TODO make other pages work
