--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<style>
       		.banner {
 			padding: 20px 0px;
-        		width: 100%;
+        		width: 90%;
       		}
 		img {
 			width: 100%;
@@ -30,7 +30,7 @@
   		<body>
 		
     			<div class="banner">
-	    			<img src="/pro-life-banner.png">
+	    			<img src="/pro-life-banner.png" class="center">
 		    	</div>
   		</body>
 	</header>
