--- a/index.html
+++ b/index.html
@@ -17,7 +17,17 @@
 	
 	<header>
 	<style>
+		.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+}
       		.banner {
+			display: block;
+  			margin-left: auto;
+  			margin-right: auto;
+}
 			padding: 20px 0px;
         		width: 90%;
       		}
@@ -30,7 +40,7 @@
   		<body>
 		
     			<div class="banner">
-	    			<img src="/pro-life-banner.png" class="center">
+	    			<img src="/pro-life-banner.png" style="width:50%;">
 		    	</div>
   		</body>
 	</header>
