--- a/index.html
+++ b/index.html
@@ -17,30 +17,20 @@
 	
 	<header>
 	<style>
-		.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 90%;
-}
-      		.banner {
-			display: block;
-  			margin-left: auto;
-  			margin-right: auto;
-}
-			padding: 20px 0px;
-      		}
-		img {
-			width: 100%;
-  			height: 100%;
-		}
+	.center {
+		display: block;
+		margin-left: auto;
+ 		margin-right: auto;
+  		width: 90%;
+	}
+    
     	</style>
 		
   		<body>
 		
-    			<div class="banner">
+    			<!--<div class="banner">-->
 	    			<img src="/pro-life-banner.png" style="width:90%;">
-		    	</div>
+		    	<!--</div>-->
   		</body>
 	</header>
 	
