--- a/index.html
+++ b/index.html
@@ -17,13 +17,11 @@
 	
 	<header>
 	<style>
-	.center {
-		display: block;
-		margin-left: auto;
- 		margin-right: auto;
-  		width: 90%;
-	}
-    
+		img {
+  			display: block;
+  			margin-left: auto;
+  			margin-right: auto;
+		}
     	</style>
 		
   		<body>
