--- a/index.html
+++ b/index.html
@@ -17,17 +17,22 @@
 	
 	<header>
 	<style>
-		img {
-  			display: block;
-  			margin-left: auto;
-  			margin-right: auto;
-		}
+		
+		
+		.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+}
     	</style>
 		
   		<body>
 		
     			<!--<div class="banner">-->
-	    			<img src="/pro-life-banner.png" style="width:90%;">
+	    			<!--<img src="/pro-life-banner.png" style="width:90%;">-->
+				    			<img src="/pro-life-banner.png" class="center">
+
 		    	<!--</div>-->
   		</body>
 	</header>
