--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         	}
 	</style>
 	
-	<h1 style="color:#b04bc0">What do we do?</h1>
+	<h1 style="color:#b04bc0">What do we do?1</h1>
 	
 	<!-- TODO make other pages work
 	<header>
