--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<style>
 		
 		
-		.center {
+		.banner {
  			display: block;
   			margin-left: auto;
   			margin-right: auto;
@@ -29,21 +29,21 @@
 		
   		<body>
 		
-    			<!--<div class="banner">-->
+    			<div class="banner">
 	    			<!--<img src="/pro-life-banner.png" style="width:90%;">-->
-						padding: 10px 0px;
+						
 
-				    			<img src="/pro-life-banner.png" class="center">
+				    			<img src="/pro-life-banner.png">
 
-		    	<!--</div>-->
+		    	</div>
   		</body>
 	</header>
 	
 	
 	<style>
       		h1 {
-        		text-indent: 20px;
-        	}
+        		text-indent: 20%;
+		}
 	</style>
 	
 	<h1 style="color:#b04bc0">What do we do?11</h1>
