--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
   		<body>
 		
     			<div class="banner">
-	    			<!--<img src="/pro-life-banner.png" style="width:90%;">-->
+	    			<img src="/pro-life-banner.png" style="width:90%;">
 						
 
-				    			<img src="/pro-life-banner.png">
+				    			<!--<img src="/pro-life-banner.png">-->
 
 		    	</div>
   		</body>
@@ -46,7 +46,7 @@
 		}
 	</style>
 	
-	<h1 style="color:#b04bc0">What do we do?11</h1>
+	<h1 style="color:#b04bc0">What do we do?111</h1>
 	
 	<!-- TODO make other pages work
 	<header>
