--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
  			display: block;
   			margin-left: auto;
   			margin-right: auto;
-  			width: 90%;
 		}
     	</style>
 		
@@ -42,11 +41,11 @@
 	
 	<style>
       		h1 {
-        		text-indent: 20%;
+        		text-indent: 10%;
 		}
 	</style>
 	
-	<h1 style="color:#b04bc0">What do we do?111</h1>
+	<h1 style="color:#b04bc0">What do we do?</h1>
 	
 	<!-- TODO make other pages work
 	<header>
