--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 	<header>
 	<style>
 		
-		
+
 		.banner {
+			
  			display: block;
   			margin-left: auto;
   			margin-right: auto;
@@ -29,7 +30,7 @@
   		<body>
 		
     			<div class="banner">
-	    			<img src="/pro-life-banner.png" style="width:90%;">
+	    			<img src="/pro-life-banner.png" class="center" style="width:90%;">
 						
 
 				    			<!--<img src="/pro-life-banner.png">-->
@@ -45,7 +46,7 @@
 		}
 	</style>
 	
-	<h1 style="color:#b04bc0">What do we do?</h1>
+	<h1 style="color:#b04bc0">What do we do?2</h1>
 	
 	<!-- TODO make other pages work
 	<header>
