--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
 	
 	<header>
 	<style>
-		
-
 		.banner {
 			
  			display: block;
@@ -29,24 +27,19 @@
 		
   		<body>
 		
-    			<div class="banner">
-	    			<img src="/pro-life-banner.png" class="center" style="width:90%;">
-						
-
-				    			<!--<img src="/pro-life-banner.png">-->
-
-		    	</div>
-  		</body>
+    			<img src="/pro-life-banner.png" class="center" style="width:90%; display: block; margin-left: auto; margin-right: auto;">
+			<!--<img src="/pro-life-banner.png">-->
+		</body>
 	</header>
 	
 	
 	<style>
       		h1 {
-        		text-indent: 10%;
+        		text-indent: 5%;
 		}
 	</style>
 	
-	<h1 style="color:#b04bc0">What do we do?2</h1>
+	<h1 style="color:#b04bc0">What do we do?22</h1>
 	
 	<!-- TODO make other pages work
 	<header>
