--- a/index.html
+++ b/index.html
@@ -16,18 +16,9 @@
 	
 	
 	<header>
-	<style>
-		.banner {
-			
- 			display: block;
-  			margin-left: auto;
-  			margin-right: auto;
-		}
-    	</style>
-		
   		<body>
 		
-    			<img src="/pro-life-banner.png" class="center" style="width:90%; display: block; margin-left: auto; margin-right: auto;">
+    			<img src="/pro-life-banner.png" class="center" style="width:90%; display: block; margin-left: auto; margin-right: auto; padding: 20px 0px 50px 0px;">
 			<!--<img src="/pro-life-banner.png">-->
 		</body>
 	</header>
