--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<header>
   		<body>
 		
-    			<img src="/pro-life-banner.png" class="center" style="width:90%; display: block; margin-left: auto; margin-right: auto; padding: 20px 0px 0px 0px;">
+    			<img src="/pro-life-banner.png" class="center" style="width:90%; display: block; margin-left: auto; margin-right: auto;">
 			<!--<img src="/pro-life-banner.png">-->
 		</body>
 	</header>
@@ -26,11 +26,11 @@
 	
 	<style>
       		h1 {
-        		text-indent: 5%;
+        		text-indent: 3%;
 		}
 	</style>
 	
-	<h1 style="color:#b04bc0">What do we do?32</h1>
+	<h1 style="color:#b04bc0">What do we do?323</h1>
 	
 	<!-- TODO make other pages work
 	<header>
