--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 	
 	<style>
       		h1 {
-        		text-indent: 3%;
+        		text-indent: 2.5%;
 		}
 	</style>
 	
-	<h1 style="color:#b04bc0">What do we do?32321</h1>
+	<h1 style="color:#b04bc0">What do we do?4332321</h1>
 	
 	<!-- TODO make other pages work
 	<header>
@@ -46,8 +46,10 @@
         -->
 	
 	<style>
-      		.box2 {
-			padding: 10px 0px;
+      		.box {
+			text-indent: 2.5%;
+
+			
         		width: 70%;
       		}
       		
