--- a/index.html
+++ b/index.html
@@ -28,9 +28,15 @@
       		h1 {
         		text-indent: 2.5%;
 		}
+		h2 {
+        		text-indent: 2.5%;
+		}
+		p {
+        		text-indent: 2.5%;
+		}
 	</style>
 	
-	<h1 style="color:#b04bc0">What do we do?4332321</h1>
+	<h1 style="color:#b04bc0">What do we do?14332321</h1>
 	
 	<!-- TODO make other pages work
 	<header>
