--- a/index.html
+++ b/index.html
@@ -28,15 +28,12 @@
       		h1 {
         		text-indent: 2.5%;
 		}
-		h2 {
-        		text-indent: 2.5%;
-		}
-		p {
+		article {
         		text-indent: 2.5%;
 		}
 	</style>
 	
-	<h1 style="color:#b04bc0">What do we do?14332321</h1>
+	<h1 style="color:#b04bc0">What do we do?214332321</h1>
 	
 	<!-- TODO make other pages work
 	<header>
