--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         		text-indent: 2.5%;
 		}
 		article {
-        		text-indent: 2.5%;
+        		padding: 0% 0% 3% 0%;
 		}
 	</style>
 	
-	<h1 style="color:#b04bc0">What do we do?214332321</h1>
+	<h1 style="color:#b04bc0">What do we do?1214332321</h1>
 	
 	<!-- TODO make other pages work
 	<header>
