--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Pro-life Hamilton</title>
     <meta name="description" content="Pro-life Hamilton">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="website-icon.png" type="image/x-icon">
+    <link rel="icon" href="website-icon.png" type="image/x-icon" style="background-color: transparent;">
     <script src="script.js"></script>
 </head>
 
@@ -28,12 +28,10 @@
       		h1 {
         		text-indent: 2.5%;
 		}
-		article {
-        		padding: 0% 0% 3% 0%;
-		}
+		
 	</style>
 	
-	<h1 style="color:#b04bc0">What do we do?1214332321</h1>
+	<h1 style="color:#b04bc0">What do we do?</h1>
 	
 	<!-- TODO make other pages work
 	<header>
