--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
       		h1 {
         		text-indent: 2.5%;
 		}
+		article {
+			margin: 2.5%;
+		}
 		
 	</style>
 	
-	<h1 style="color:#b04bc0">What do we do?</h1>
+	<h1 style="color:#b04bc0">What do we do?a</h1>
 	
 	<!-- TODO make other pages work
 	<header>
