--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		
 	</style>
 	
-	<h1 style="color:#b04bc0">What do we do?a</h1>
+	<h1 style="color:#b04bc0">What do we do?ab</h1>
 	
 	<!-- TODO make other pages work
 	<header>
@@ -52,6 +52,8 @@
 
 			
         		width: 70%;
+			min-width: 70%;
+			max-width: 70%;
       		}
       		
     	</style>
