--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		
 	</style>
 	
-	<h1 style="color:#b04bc0">What do we do?ab</h1>
+	<h1 style="color:#b04bc0">What do we do?abc</h1>
 	
 	<!-- TODO make other pages work
 	<header>
@@ -59,7 +59,7 @@
     	</style>
 	
 	<section id="pageContent">
-		<main role="main">
+		<!--<main role="main">-->
 			<article>
 				<h2>Deliver C-233 bronchures to Hamilton homes</h2>
 				<p>Currently 1000 have been delivered.</p>
@@ -86,7 +86,7 @@
 				<h2>His at autem inani volutpat</h2>
 				<p>Te has amet modo perfecto, te eum mucius conclusionemque, mel te erat deterruisset. Duo ceteros phaedrum id, ornatus postulant in sea. His at autem inani volutpat. Tollit possit in pri, platonem persecuti ad vix, vel nisl albucius gloriatur no.</p>
 			</article>
-		</main>
+		<!--</main>-->
 		<aside>
 			<div>Sidebar 1</div>
 			<div>Sidebar 2</div>
