--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         		text-indent: 2.5%;
 		}
 		article {
-			margin: 2.5%;
+			
 		}
 		
 	</style>
 	
-	<h1 style="color:#b04bc0">What do we do?abc</h1>
+	<h1 style="color:#b04bc0">What do we do?abcd</h1>
 	
 	<!-- TODO make other pages work
 	<header>
@@ -48,7 +48,7 @@
         -->
 	
 	<style>
-      		.box {
+      		.article {
 
 			
         		width: 70%;
