--- a/index.html
+++ b/index.html
@@ -27,36 +27,16 @@
         		text-indent: 2.5%;
 		}
 		article {
-			
-		}
-		
-	</style>
-	
-	<h1 style="color:#b04bc0">What do we do?abcd</h1>
-	
-	<!-- TODO make other pages work
-	<header>
-		<nav>  
-			<ul>
-				<li><a href="/">Home</a>
-				<li><a href="https://html-css-js.com/">Information</a>
-				<li><a href="https://html-css-js.com/css/code/">Pictures</a>
-				<li><a href="https://htmlcheatsheet.com/js/">Contact</a>
-			</ul>
-		</nav>
-	</header>
-        -->
-	
-	<style>
-      		.article {
-
-			
-        		width: 70%;
+			margin: auto;
+			width: 70%;
 			min-width: 70%;
 			max-width: 70%;
       		}
       		
     	</style>
+	
+	<h1 style="color:#b04bc0">What do we do?abcdc</h1>
+
 	
 	<section id="pageContent">
 		<!--<main role="main">-->
