--- a/index.html
+++ b/index.html
@@ -27,15 +27,14 @@
         		text-indent: 2.5%;
 		}
 		article {
-			margin: auto;
+			margin: 0px;
 			width: 70%;
 			min-width: 70%;
 			max-width: 70%;
       		}
-      		
     	</style>
 	
-	<h1 style="color:#b04bc0">What do we do?abcdc</h1>
+	<h1 style="color:#b04bc0">What do we do?abcdce</h1>
 
 	
 	<section id="pageContent">
