--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
 			min-width: 70%;
 			max-width: 70%;
       		}
+		#pageContent {
+    width: 70%;
+}
     	</style>
 	
-	<h1 style="color:#b04bc0">What do we do?abcdce</h1>
+	<h1 style="color:#b04bc0">What do we do?abcdcef</h1>
 
 	
 	<section id="pageContent">
