--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 			min-width: 70%;
 			max-width: 70%;
       		}
-		#pageContent {
-    width: 70%;
-}
+		
+		
+		#responsive-image {  width: 70%;  height: auto; } 
     	</style>
 	
 	<h1 style="color:#b04bc0">What do we do?abcdcef</h1>
@@ -47,7 +47,7 @@
 				<p>Currently 1000 have been delivered.</p>
 				<div class="box">
 					<a href="https://docs.google.com/forms/d/e/1FAIpQLSdCK-jsO5aHyPRnLotl2B2710aKwor-knma7SnKfJ-CXAY1aA/viewform">
-	    					<img src="/defend_girls.png">
+	    					<img src="/defend_girls.png" id="responsive-image">
 					</a>
 		    		</div>
 			</article>
