--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		#responsive-image {  width: 70%;  height: auto; } 
     	</style>
 	
-	<h1 style="color:#b04bc0">What do we do?abcdcef</h1>
+	<h1 style="color:#b04bc0">What do we do?abcdcefg</h1>
 
 	
 	<section id="pageContent">
