--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 	<section id="pageContent">
 		<!--<main role="main">-->
 			<article>
-				<h2>Deliver C-233 bronchures to Hamilton homes</h2>
-				<p>Currently 1000 have been delivered.</p>
+				<h2>Deliver C-233 bronchures to Hamilton homesDeliver C-233 bronchures to Hamilton homesDeliver C-233 bronchures to Hamilton homesDeliver C-233 bronchures to Hamilton homesDeliver C-233 bronchures to Hamilton homesDeliver C-233 bronchures to Hamilton homes</h2>
+				<p>Currently 1000 have been delivered.Deliver C-233 bronchures to Hamilton homesDeliver C-233 bronchures to Hamilton homesDeliver C-233 bronchures to Hamilton homesDeliver C-233 bronchures to Hamilton homesDeliver C-233 bronchures to Hamilton homes</p>
 				<div class="box">
 					<a href="https://docs.google.com/forms/d/e/1FAIpQLSdCK-jsO5aHyPRnLotl2B2710aKwor-knma7SnKfJ-CXAY1aA/viewform">
 	    					<img src="/defend_girls.png" id="responsive-image">
