--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 	
 	<section id="pageContent">
-		<!--<main role="main">-->
+		<main role="main">
 			<article>
 				<h2>Deliver C-233 bronchures to Hamilton homesDeliver C-233 bronchures to Hamilton homesDeliver C-233 bronchures to Hamilton homesDeliver C-233 bronchures to Hamilton homesDeliver C-233 bronchures to Hamilton homesDeliver C-233 bronchures to Hamilton homes</h2>
 				<p>Currently 1000 have been delivered.Deliver C-233 bronchures to Hamilton homesDeliver C-233 bronchures to Hamilton homesDeliver C-233 bronchures to Hamilton homesDeliver C-233 bronchures to Hamilton homesDeliver C-233 bronchures to Hamilton homes</p>
@@ -68,7 +68,7 @@
 				<h2>His at autem inani volutpat</h2>
 				<p>Te has amet modo perfecto, te eum mucius conclusionemque, mel te erat deterruisset. Duo ceteros phaedrum id, ornatus postulant in sea. His at autem inani volutpat. Tollit possit in pri, platonem persecuti ad vix, vel nisl albucius gloriatur no.</p>
 			</article>
-		<!--</main>-->
+		</main>
 		<aside>
 			<div>Sidebar 1</div>
 			<div>Sidebar 2</div>
