--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
 		}
 		article {
 			margin: 0px;
-			width: 70%;
-			min-width: 70%;
-			max-width: 70%;
+			width: 60%;
+			min-width: 60%;
+			max-width: 60%;
       		}
 		
 		
-		#responsive-image {  width: 70%;  height: auto; } 
+		#responsive-image {  width: 60%;  height: auto; } 
     	</style>
 	
-	<h1 style="color:#b04bc0">What do we do?abcdcefg</h1>
+	<h1 style="color:#b04bc0">What do we do?a</h1>
 
 	
 	<section id="pageContent">
