--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		#responsive-image {  width: 60%;  height: auto; } 
     	</style>
 	
-	<h1 style="color:#b04bc0">What do we do?a</h1>
+	<h1 style="color:#b04bc0">What do we do?ab</h1>
 
 	
 	<section id="pageContent">
