--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		#responsive-image {  width: 60%;  height: auto; } 
     	</style>
 	
-	<h1 style="color:#b04bc0">What do we do?ab</h1>
+	<h1 style="color:#b04bc0">What do we do?abc</h1>
 
 	
 	<section id="pageContent">
@@ -54,7 +54,7 @@
 				<p>Currently we have 180 signatures.</p>
 				<div class="box">
 				 	<a href="https://docs.google.com/forms/d/e/1FAIpQLSdCK-jsO5aHyPRnLotl2B2710aKwor-knma7SnKfJ-CXAY1aA/viewform">
-  						<img src="/c-233-petition.png" id="responsive-image>
+  						<img src="/c-233-petition.png" id="responsive-image">
 					</a> 
 				</div>
 			</article>
