--- a/index.html
+++ b/index.html
@@ -26,16 +26,11 @@
       		h1 {
         		text-indent: 2.5%;
 		}
-		article {
-			margin: 0px;
-
-      		}
-		
-		
+				
 		#responsive-image {  width: 60%;  height: auto; } 
     	</style>
 	
-	<h1 style="color:#b04bc0">What do we do?abc</h1>
+	<h1 style="color:#b04bc0">What do we do?abcd</h1>
 
 	
 		<main role="main">
