--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		#responsive-image {  width: 100%;  height: auto; } 
     	</style>
 	
-	<h1 style="color:#b04bc0">What do we do?abcd</h1>
+	<h1 style="color:#b04bc0">What do we do?abcde</h1>
 
 	
 		<main role="main">
