--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
 			color: #b04bc0;
         		text-indent: 2.5%;
 		}
-				
+		h2{
+			font-size: 21px;
+			color: #23629e;
+		}
 		#responsive-image {  width: 100%;  height: auto; } 
     	</style>
 	
-	<h1 style="color:#b04bc0">What do we do?abcde</h1>
+	<h1 style="color:#b04bc0">What do we do?abcdef</h1>
 
 	
 		<main role="main">
