--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		#responsive-image {  width: 100%;  height: auto; } 
     	</style>
 	
-	<h1 style="color:#b04bc0">What do we do?abcdef</h1>
+	<h1 style="color:#b04bc0">What do we do?abcdefg</h1>
 
 	
 		<main role="main">
