--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
 		#responsive-image {  width: 100%;  height: auto; } 
     	</style>
 	
-	<h1 style="color:#b04bc0">What do we do?abcdefg</h1>
+	<h1>Who are we?</h1>
+	<p>We are a pro-life organization.</p>
+	<h1>What do we do?abcdefg</h1>
+	<h1>We advocate for the rights of the unborn</h1>
 
 	
 		<main role="main">
