--- a/index.html
+++ b/index.html
@@ -31,13 +31,23 @@
 		h2{
 			font-size: 21px;
 			color: #23629e;
+			margin-bottom: 20px;
 		}
+		
+		article {
+   			border-bottom: 2px dotted #999;
+   			padding-bottom: 20px;
+    			margin-bottom: 20px;
+		}
+		
 		#responsive-image {  width: 100%;  height: auto; } 
+		
+		
     	</style>
 	
 	<h1>Who are we?</h1>
 	<p>We are a pro-life organization.</p>
-	<h1>What do we do?abcdefg</h1>
+	<h1>What do we do?abcdefgh</h1>
 	<h1>We advocate for the rights of the unborn</h1>
 
 	
