--- a/index.html
+++ b/index.html
@@ -42,14 +42,20 @@
 		
 		#responsive-image {  width: 100%;  height: auto; } 
 		
+		starter {
+			text-indent: 2.5%;
+		}
+
+		
 		
     	</style>
 	
+	<starter>
 	<h1>Who are we?</h1>
 	<p>We are a pro-life organization.</p>
-	<h1>What do we do?abcdefgh</h1>
-	<h1>We advocate for the rights of the unborn</h1>
-
+	<h1>What do we do?abcdefghi</h1>
+	<p>We advocate for the rights of the unborn</h1>
+	</starter>
 	
 		<main role="main">
 			<article>
