--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="canonical" href="https://html5-templates.com/" />
     <title>Pro-life Hamilton</title>
     <meta name="description" content="Pro-life Hamilton">
-    <link rel="stylesheet" href="style.css">
+<!--   <link rel="stylesheet" href="style.css">-->
     <link rel="icon" href="website-icon.png" type="image/x-icon" style="background-color: transparent;">
     <script src="script.js"></script>
 </head>
@@ -63,7 +63,7 @@ aside {
 }
 
 		p {
-			padding: 0px 0px 30px 0px;
+			padding: 0px 0px 15px 0px;
 		}
 
 article h2 {
@@ -96,7 +96,7 @@ aside > div {
     	</style>
 	
 	<starter>
-	<h1>Who are we?</h1>
+	<h1>Who are we?1</h1>
 	<p>We are a pro-life organization.</p>
 	<h1>What do we do?abcdefghi</h1>
 	<p>We advocate for the rights of the unborn</h1>
