--- a/index.html
+++ b/index.html
@@ -7,10 +7,85 @@
     <link rel="canonical" href="https://html5-templates.com/" />
     <title>Pro-life Hamilton</title>
     <meta name="description" content="Pro-life Hamilton">
-<!--   <link rel="stylesheet" href="style.css">-->
+    <!--   <link rel="stylesheet" href="style.css">-->
     <link rel="icon" href="website-icon.png" type="image/x-icon" style="background-color: transparent;">
     <script src="script.js"></script>
 </head>
+	
+<style>
+	h1 {
+		font-size: 25px;
+		color: #b04bc0;
+        	text-indent: 2.5%;
+	}
+	
+	h2{
+		font-size: 21px;
+		color: #23629e;
+		margin-bottom: 20px;
+	}
+		
+	article {
+   		border-bottom: 2px dotted #999;
+   		padding-bottom: 20px;
+    		margin-bottom: 20px;
+	}
+		
+	#responsive-image {  width: 100%;  height: auto; } 
+		
+	intro {
+		text-indent: 2.5%;
+	}
+		
+	main {
+		float: left;
+		width: 60%;
+		min-width: 60%;
+		max-width: 60%;
+		margin: 2.5%;
+	}
+	aside {
+		float: right;
+		width: 30%;
+		min-width: 30%;
+		max-width: 30%;
+	}
+
+	p {
+		padding: 0px 0px 15px 0px;
+	}
+
+	article h2 {
+    		font-weight: normal;
+   		 margin-bottom: 12px;
+	}
+
+	footer {
+		background: #23629e;
+		color: #ffffff;
+		max-width: 2000px;
+		margin: auto;
+		clear: both;
+		text-align: right;
+	}
+	
+	footer p {
+		padding: 20px;
+	}
+	
+	address {
+    		padding: 10px 20px 30px 10px;
+	}
+	
+	aside > div {
+		margin: 10px auto;
+		background: #FFFFFF;
+		min-height: 100px;
+	}
+		
+</style>
+
+
 
 <body>
 	
@@ -22,85 +97,14 @@
 	</header>
 	
 	
-	<style>
-      		h1 {
-			font-size: 25px;
-			color: #b04bc0;
-        		text-indent: 2.5%;
-		}
-		h2{
-			font-size: 21px;
-			color: #23629e;
-			margin-bottom: 20px;
-		}
-		
-		article {
-   			border-bottom: 2px dotted #999;
-   			padding-bottom: 20px;
-    			margin-bottom: 20px;
-		}
-		
-		#responsive-image {  width: 100%;  height: auto; } 
-		
-		starter {
-			text-indent: 2.5%;
-		}
-
-		
-main {
-	float: left;
-	width: 60%;
-	min-width: 60%;
-	max-width: 60%;
-	margin: 2.5%;
-}
-aside {
-	float: right;
-	width: 30%;
-	min-width: 30%;
-	max-width: 30%;
-
-}
-
-		p {
-			padding: 0px 0px 15px 0px;
-		}
-
-article h2 {
-    font-weight: normal;
-    margin-bottom: 12px;
-}
-
-footer {
-	background: #23629e;
-	color: #ffffff;
-	max-width: 2000px;
-	margin: auto;
-	clear: both;
-	text-align: right;
-}
-footer p {
-	padding: 20px;
-}
-address {
-    padding: 10px 20px 30px 10px;
-}
-aside > div {
-	margin: 10px auto;
-	background: #FFFFFF;
-	min-height: 100px;
-}
-		
-
-		
-    	</style>
 	
-	<starter>
-	<h1>Who are we?1</h1>
-	<p>We are a pro-life organization.</p>
-	<h1>What do we do?abcdefghi</h1>
-	<p>We advocate for the rights of the unborn</h1>
-	</starter>
+	
+	<intro>
+		<h1>Who are we?</h1>
+		<p>We are a pro-life organization.</p>
+		<h1>What do we do?</h1>
+		<p>We advocate for the rights of the unborn</h1>
+	</intro>
 	
 		<main role="main">
 			<article>
