--- a/index.html
+++ b/index.html
@@ -89,15 +89,9 @@
 
 <body>
 	
-	
 	<header>
-  		<body>
-    			<img src="/pro-life-banner.png" class="center" style="width:95%; display: block; margin-left: auto; margin-right: auto; padding: 10px 0px 30px 0px;">
-		</body>
+    		<img src="/pro-life-banner.png" class="center" style="width:95%; display: block; margin-left: auto; margin-right: auto; padding: 10px 0px 30px 0px;">
 	</header>
-	
-	
-	
 	
 	<intro>
 		<h1>Who are we?</h1>
@@ -129,6 +123,7 @@
 	
 	<aside>
 		<div>Sidebar 1</div>
+		<p>dfdfdsfdsafjddflkdhsflkhae kewkhrehr kheer   ewr elkhre wlhlrkhwe w lheklr lhkewkhr wer ewM</p>
 		<div>Sidebar 2</div>
 		<div>Sidebar 3</div>
 	</aside>
