--- a/index.html
+++ b/index.html
@@ -122,10 +122,12 @@
 	
 	<aside>
 		<h1>Links</h1>
-		<div>Sidebar 1</div>
-		<p>dfdfdsfdsafjddflkdhsflkhae kewkhrehr kheer   ewr elkhre wlhlrkhwe w lheklr lhkewkhr wer ewM</p>
-		<div>Sidebar 2</div>
-		<div>Sidebar 3</div>
+		<div>We Need a Law</div>
+		<p>An organization which focuses on incremental changes in abortion law restrictions</p>
+		<div>Canadian Centre for Bio-Ethical Reform</div>
+		<p>This organization has the goal of changing the public's mind through saturation of the reality of abortion.
+		<div>Hamilton Right to Life</div>
+		<p>A group which raises money to give to pregnancy agencies. They also use billboards as a means of getting the pro-life message out.</p>
 	</aside>
 	
 	<footer>
