--- a/index.html
+++ b/index.html
@@ -122,12 +122,19 @@
 	
 	<aside>
 		<h1>Links</h1>
-		<div>We Need a Law</div>
+		
+		<a href="https://weneedalaw.ca/">We Need a Law</a>
 		<p>An organization which focuses on incremental changes in abortion law restrictions</p>
-		<div>Canadian Centre for Bio-Ethical Reform</div>
+
+		<a href="https://www.endthekilling.ca/">Canadian Centre for Bio-Ethical Reform</a>
 		<p>This organization has the goal of changing the public's mind through saturation of the reality of abortion.
-		<div>Hamilton Right to Life</div>
+
+		<a href="https://hamiltonrighttolife.org/">Hamilton Right to Life</a>
 		<p>A group which raises money to give to pregnancy agencies. They also use billboards as a means of getting the pro-life message out.</p>
+
+		<a href="https://www.facebook.com/hamiltonagainstabortion/">Hamilton Against Abortion</a>
+		<p>Foot soldiers who use CCBR tactics and literature.</p>
+
 	</aside>
 	
 	<footer>
