--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 		<p>An organization which focuses on incremental changes in abortion law restrictions</p>
 
 		<a href="https://www.endthekilling.ca/">Canadian Centre for Bio-Ethical Reform</a>
-		<p>This organization has the goal of changing the public's mind through saturation of the reality of abortion.
+		<p>This organization has the goal of changing the public's mind through saturation of the reality of abortion.</p>
 
 		<a href="https://hamiltonrighttolife.org/">Hamilton Right to Life</a>
 		<p>A group which raises money to give to pregnancy agencies. They also use billboards as a means of getting the pro-life message out.</p>
