--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
 	p {
 		padding: 0px 0px 0px 0px;
 	}
+	
+	
+	a:link {
+ 		color: #23629e;
+		text-decoration: none;
+	}
+
+	a:visited {
+  		color: #b04bc0;
+  		text-decoration: none;
+	}
+
+	a:hover {
+  		text-decoration: underline;
+	}
 		
 	article {
    		border-bottom: 2px dotted #999;
