--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 	}
 
 	footer {
-		background: #bedfff;
-		color: #ffffff;
+		background: #9edff;
+		color: #000000;
 		max-width: 2000px;
 		margin: auto;
 		clear: both;
