--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
   		color: #b04bc0;
   		text-decoration: none;
 	}
+	
+	address {
+		text-decoration: none;
+	}
 
 	a:hover {
   		text-decoration: underline;
