--- a/index.html
+++ b/index.html
@@ -40,10 +40,6 @@
   		text-decoration: none;
 	}
 	
-	address {
-		text-decoration: none;
-	}
-
 	a:hover {
   		text-decoration: underline;
 	}
@@ -158,9 +154,8 @@
 	
 	<footer>
 		<p>Website template taken from <a href="https://html5-templates.com/" target="_blank" rel="nofollow">HTML5 Templates</a></p>
-		<address>
-			Contact: <a href="mailto:prolifehamilton@protonmail.com">prolifehamilton@protonmail.com</a>
-		</address>
+		<p>Contact</p><a href="mailto:prolifehamilton@protonmail.com">prolifehamilton@protonmail.com</a>
+
 	</footer>
 
 
