--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 	</aside>
 	
 	<footer>
-		<p>Website template taken from <a href="https://html5-templates.com/" target="_blank" rel="nofollow">HTML5 Templates</a></p>
+		<p>Website design from <a href="https://html5-templates.com/" target="_blank" rel="nofollow">HTML5 Templates</a></p>
 		<p>Contact</p><a href="mailto:prolifehamilton@protonmail.com">prolifehamilton@protonmail.com</a>
 
 	</footer>
