--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 	
 	<footer>
 		<p>Website design from <a href="https://html5-templates.com/" target="_blank" rel="nofollow">HTML5 Templates</a></p>
-		<p>Contact</p><a href="mailto:prolifehamilton@protonmail.com">prolifehamilton@protonmail.com</a>
+		<p>Contact <a href="mailto:prolifehamilton@protonmail.com">prolifehamilton@protonmail.com</a></p>
 
 	</footer>
 
