--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
 	
 	<main role="main">
 		<article>
-			<h2>Deliver C-233 bronchures to Hamilton homesDeliver C-233 bronchures to Hamilton homesDeliver C-233 bronchures to Hamilton homesDeliver C-233 bronchures to Hamilton homesDeliver C-233 bronchures to Hamilton homesDeliver C-233 bronchures to Hamilton homes</h2>
-			<p>Currently 1000 have been delivered.Deliver C-233 bronchures to Hamilton homesDeliver C-233 bronchures to Hamilton homesDeliver C-233 bronchures to Hamilton homesDeliver C-233 bronchures to Hamilton homesDeliver C-233 bronchures to Hamilton homes</p>
+			<h2>Delivering C-233 bronchures to Hamilton homes:</h2>
+			<p>Currently 1000 have been delivered to Hamilton homes</p>
 			<div class="box">
 				<a href="https://docs.google.com/forms/d/e/1FAIpQLSdCK-jsO5aHyPRnLotl2B2710aKwor-knma7SnKfJ-CXAY1aA/viewform">
 	    				<img src="/defend_girls.png" id="responsive-image">
@@ -125,7 +125,7 @@
 		    	</div>
 		</article>
 		<article>
-			<h2>Get petitions signed in support of C-233</h2>
+			<h2>Petitions signed in support of C-233:</h2>
 			<p>Currently we have 180 signatures.</p>
 			<div class="box">
 				 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdCK-jsO5aHyPRnLotl2B2710aKwor-knma7SnKfJ-CXAY1aA/viewform">
