--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="canonical" href="https://html5-templates.com/" />
     <title>Pro-life Hamilton</title>
     <meta name="description" content="Pro-life Hamilton">
-    <link rel="icon" href="favicon.png" type="image/gif">
+    <link rel="icon" href="favicon.png" type="image/png">
     <script src="script.js"></script>
 </head>
 
