--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
     		margin-bottom: 20px;
 	}
 		
-	#responsive-image {  width: 100%;  height: auto; } 
-		
+		img {
+  width: 100%;
+  height: auto;
+}
 	intro {
 		text-indent: 2.5%;
 	}
@@ -102,7 +104,7 @@
 	</header>
 	
 	<intro>
-		<h1>Who are we?</h1>
+		<h1>Who are we?1</h1>
 		<p>We are a pro-life organization.</p>
 		<h1>What do we do?</h1>
 		<p>We advocate for the rights of the unborn</h1>
