--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 	</header>
 	
 	<intro>
-		<h1>Who are we?1</h1>
+		<h1>Who are we?11</h1>
 		<p>We are a pro-life organization.</p>
 		<h1>What do we do?</h1>
 		<p>We advocate for the rights of the unborn</h1>
@@ -116,7 +116,7 @@
 			<p>Currently 1250 have been delivered to Hamilton homes</p>
 			<div class="box">
 				<a href="https://docs.google.com/forms/d/e/1FAIpQLSdCK-jsO5aHyPRnLotl2B2710aKwor-knma7SnKfJ-CXAY1aA/viewform">
-	    				<img src="/defend_girls.png" id="responsive-image">
+	    				<img src="/defend_girls.png">
 				</a>
 		    	</div>
 		</article>
