--- a/index.html
+++ b/index.html
@@ -87,11 +87,7 @@
 		text-align: right;
 	}
 	
-	
-	
-	aside > div {
-		
-	}
+
 		
 </style>
 
@@ -125,7 +121,7 @@
 			<p>Currently we have 180 signatures.</p>
 			<div class="box">
 				 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdCK-jsO5aHyPRnLotl2B2710aKwor-knma7SnKfJ-CXAY1aA/viewform">
-  					<img src="/c-233-petition.png" id="responsive-image">
+  					<img src="/c-233-petition.png">
 				</a> 
 			</div>
 		</article>
