--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
 	</header>
 	
 	<intro>
-		<h1>Who are we?111</h1>
-		<p>We are a pro-life organization.</p>
+		<h1>Who are we?</h1>
+		<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
 		<h1>What do we do?</h1>
-		<p>We advocate for the rights of the unborn</h1>
+		<p>We advocate for the legal rights of the unborn through spreading information and petitions.</h1>
 	</intro>
 	
 	<main role="main">
