--- a/index.html
+++ b/index.html
@@ -91,8 +91,11 @@
 		<h1>Who are we?</h1>
 		<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
 		<h1>What do we do?</h1>
-		<p>We advocate for the legal rights of the unborn through spreading information and petitions.</h1>
+		<p>We advocate for the legal rights of the unborn through spreading information and petitions. Currently our focus is getting bill C-233 passed.</h1>
+		<h1>What is C-233?</h1>
+		<p><a href="https://www.parl.ca/DocumentViewer/en/43-1/bill/C-233/first-reading">C-233</a> is a bill proposed by <a href="http://www.cathaywagantall.ca/">MP Cathay Wagantall</a> which would make sex-selective abortion illegal in all provinces of Canada.
 	</intro>
+	
 	
 	<main role="main">
 		<article>
