--- a/index.html
+++ b/index.html
@@ -96,11 +96,10 @@
 		<p><a href="https://www.parl.ca/DocumentViewer/en/43-1/bill/C-233/first-reading">C-233</a> is a bill proposed by <a href="http://www.cathaywagantall.ca/">MP Cathay Wagantall</a> which would make <a href="https://en.wikipedia.org/wiki/Sex-selective_abortion">sex-selective abortion</a> illegal in all provinces of Canada.
 	</intro>
 	
-	
 	<main role="main">
 		<article>
-			<h2>Delivering C-233 bronchures to Hamilton homes:</h2>
-			<p>Currently 1250 have been delivered to Hamilton homes</p>
+			<h2>We deliver C-233 bronchures to Hamilton homes:</h2>
+			<p>Currently 1250 have been delivered</p>
 			<div class="box">
 				<a href="https://docs.google.com/forms/d/e/1FAIpQLSdCK-jsO5aHyPRnLotl2B2710aKwor-knma7SnKfJ-CXAY1aA/viewform">
 	    				<img src="/defend_girls.png">
@@ -108,8 +107,8 @@
 		    	</div>
 		</article>
 		<article>
-			<h2>Petitions signed in support of C-233:</h2>
-			<p>Currently we have 180 signatures.</p>
+			<h2>We collect petitions in support of C-233:</h2>
+			<p>Currently we have 180 signatures</p>
 			<div class="box">
 				 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdCK-jsO5aHyPRnLotl2B2710aKwor-knma7SnKfJ-CXAY1aA/viewform">
   					<img src="/c-233-petition.png">
