--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 	<main role="main">
 		<article>
 			<h2>We deliver C-233 bronchures to Hamilton homes:</h2>
-			<p>Currently 1250 have been delivered</p>
+			<p>Currently 1250 have been delivered.</p>
 			<div class="box">
 				<a href="https://docs.google.com/forms/d/e/1FAIpQLSdCK-jsO5aHyPRnLotl2B2710aKwor-knma7SnKfJ-CXAY1aA/viewform">
 	    				<img src="/defend_girls.png">
@@ -108,7 +108,7 @@
 		</article>
 		<article>
 			<h2>We collect petitions in support of C-233:</h2>
-			<p>Currently we have 180 signatures</p>
+			<p>Currently we have 180 signatures.</p>
 			<div class="box">
 				 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdCK-jsO5aHyPRnLotl2B2710aKwor-knma7SnKfJ-CXAY1aA/viewform">
   					<img src="/c-233-petition.png">
@@ -124,13 +124,13 @@
 		<p>An organization which focuses on incremental changes in abortion law restrictions</p>
 
 		<a href="https://www.endthekilling.ca/">Canadian Centre for Bio-Ethical Reform</a>
-		<p>This organization has the goal of changing the public's mind through saturation of the reality of abortion.</p>
-
-		<a href="https://hamiltonrighttolife.org/">Hamilton Right to Life</a>
-		<p>A group which raises money to give to pregnancy agencies. They also use billboards as a means of getting the pro-life message out.</p>
+		<p>This organization has the goal of making abortion unthinkable through an information campaign which will saturate the public with the reality of abortion.</p>
 
 		<a href="https://www.facebook.com/hamiltonagainstabortion/">Hamilton Against Abortion</a>
-		<p>Foot soldiers who use CCBR tactics and literature.</p>
+		<p>A group of passionate pro-lifers whose goal is to make abortion unthinkable in the Hamilton Region and beyond! They use CCBR's methods, literature, and signs</p>
+		
+		<a href="https://hamiltonrighttolife.org/">Hamilton Right to Life</a>
+		<p>A group which raises money to give to pregnancy agencies. They also use billboards as a means of getting the pro-life message out.</p>
 
 	</aside>
 	
