--- a/index.html
+++ b/index.html
@@ -121,16 +121,16 @@
 		<h1>Links</h1>
 		
 		<a href="https://weneedalaw.ca/">We Need a Law</a>
-		<p>An organization which focuses on incremental changes in abortion law restrictions</p>
+		<p>We mobilize Canadians and persuade our political leaders to pass laws that protect children before birth</p>
 
 		<a href="https://www.endthekilling.ca/">Canadian Centre for Bio-Ethical Reform</a>
-		<p>This organization has the goal of making abortion unthinkable through an information campaign which will saturate the public with the reality of abortion.</p>
+		<p>The Canadian Centre for Bio-Ethical Reform is an educational human rights organization dedicated to speaking out on behalf of the youngest and most vulnerable members of the human family</p>
 
 		<a href="https://www.facebook.com/hamiltonagainstabortion/">Hamilton Against Abortion</a>
 		<p>A group of passionate pro-lifers whose goal is to make abortion unthinkable in the Hamilton Region and beyond! They use CCBR's methods, literature, and signs</p>
 		
 		<a href="https://hamiltonrighttolife.org/">Hamilton Right to Life</a>
-		<p>A group which raises money to give to pregnancy agencies. They also use billboards as a means of getting the pro-life message out.</p>
+		<p>Hamilton Right to Life is an educational non-political, non-denominational organization (Charitable Registration No.: 118951862RR0001). We promote respect for all human life from conception to natural death through education</p>
 
 	</aside>
 	
