--- a/index.html
+++ b/index.html
@@ -100,11 +100,9 @@
 		<article>
 			<h2>We deliver C-233 bronchures to Hamilton homes:</h2>
 			<p>Currently 1250 have been delivered.</p>
-			<div class="box">
 				<a href="https://docs.google.com/forms/d/e/1FAIpQLSdCK-jsO5aHyPRnLotl2B2710aKwor-knma7SnKfJ-CXAY1aA/viewform">
 	    				<img src="/defend_girls.png">
 				</a>
-		    	</div>
 		</article>
 		<article>
 			<h2>We collect petitions in support of C-233:</h2>
@@ -121,16 +119,16 @@
 		<h1>Links</h1>
 		
 		<a href="https://weneedalaw.ca/">We Need a Law</a>
-		<p>We mobilize Canadians and persuade our political leaders to pass laws that protect children before birth</p>
+		<p>We mobilize Canadians and persuade our political leaders to pass laws that protect children before birth.</p>
 
 		<a href="https://www.endthekilling.ca/">Canadian Centre for Bio-Ethical Reform</a>
-		<p>The Canadian Centre for Bio-Ethical Reform is an educational human rights organization dedicated to speaking out on behalf of the youngest and most vulnerable members of the human family</p>
+		<p>The Canadian Centre for Bio-Ethical Reform is an educational human rights organization dedicated to speaking out on behalf of the youngest and most vulnerable members of the human family.</p>
 
 		<a href="https://www.facebook.com/hamiltonagainstabortion/">Hamilton Against Abortion</a>
-		<p>A group of passionate pro-lifers whose goal is to make abortion unthinkable in the Hamilton Region and beyond! They use CCBR's methods, literature, and signs</p>
+		<p>Hamilton Against Abortion (HAA) is a grassroots movement dedicated to educating local individuals on the realities of abortion. We do this by equipping the Hamilton Region on how to defend the pro-life position and by taking the message to the streets. We use abortion victim imagery along with other resources, and unmask the truth of abortion to the general public.</p>
 		
 		<a href="https://hamiltonrighttolife.org/">Hamilton Right to Life</a>
-		<p>Hamilton Right to Life is an educational non-political, non-denominational organization (Charitable Registration No.: 118951862RR0001). We promote respect for all human life from conception to natural death through education</p>
+		<p>Hamilton Right to Life is an educational non-political, non-denominational organization (Charitable Registration No.: 118951862RR0001). We promote respect for all human life from conception to natural death through education.</p>
 
 	</aside>
 	
