--- a/index.html
+++ b/index.html
@@ -107,11 +107,9 @@
 		<article>
 			<h2>We collect petitions in support of C-233:</h2>
 			<p>Currently we have 180 signatures.</p>
-			<div class="box">
-				 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdCK-jsO5aHyPRnLotl2B2710aKwor-knma7SnKfJ-CXAY1aA/viewform">
-  					<img src="/c-233-petition.png">
-				</a> 
-			</div>
+			<a href="https://docs.google.com/forms/d/e/1FAIpQLSdCK-jsO5aHyPRnLotl2B2710aKwor-knma7SnKfJ-CXAY1aA/viewform">
+  				<img src="/c-233-petition.png">
+			</a> 
 		</article>
 	</main>
 	
@@ -123,6 +121,7 @@
 		<p>We mobilize Canadians and persuade our political leaders to pass laws that protect children before birth.</p>
 
 		<a href="https://www.endthekilling.ca/">Canadian Centre for Bio-Ethical Reform</a>
+		<a href="https://www.endthekilling.ca/"><img src="ccbr-logo.png"></a>
 		<p>The Canadian Centre for Bio-Ethical Reform is an educational human rights organization dedicated to speaking out on behalf of the youngest and most vulnerable members of the human family.</p>
 
 		<a href="https://www.facebook.com/hamiltonagainstabortion/">Hamilton Against Abortion</a>
