--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 		<h1>Links</h1>
 		
 		<a href="https://weneedalaw.ca/">We Need a Law</a>
-		<a href="https://weneedalaw.ca/"><img src="we_need_a_law.png"></a>
+		<a href="https://weneedalaw.ca/"><img src="We-Need-A-Law-Logo-Blue.png"></a>
 		<p>We mobilize Canadians and persuade our political leaders to pass laws that protect children before birth.</p>
 
 		<a href="https://www.endthekilling.ca/">Canadian Centre for Bio-Ethical Reform</a>
