--- a/index.html
+++ b/index.html
@@ -16,11 +16,17 @@
 	h1 {
 		font-size: 25px;
 		color: #b04bc0;
-        	text-indent: 2.5%;
+        	margin: 2.5%;
 	}
 	
 	h2{
 		font-size: 21px;
+		color: #23629e;
+		margin-bottom: 20px;
+	}
+	
+	h3{
+		font-size: 18px;
 		color: #23629e;
 		margin-bottom: 20px;
 	}
@@ -50,10 +56,6 @@
   		height: auto;
 	}
 	
-	intro {
-		text-indent: 2.5%;
-	}
-		
 	main {
 		float: left;
 		width: 70%;
@@ -87,7 +89,7 @@
     		<img src="/pro-life-banner.png" class="center" style="width:95%; display: block; margin-left: auto; margin-right: auto; padding: 10px 0px 30px 0px;">
 	</header>
 	
-		<main role="main">
+	<main role="main">
 
 		<h1>Who are we?</h1>
 		<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
