--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 	
 	<main role="main">
 
-		<h1>Who are we?</h1>
+		<h1>Who are we?1</h1>
 		<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
 		<h1>What do we do?</h1>
 		<p>We advocate for the legal rights of the unborn through spreading information and collecting petitions. Currently our focus is getting bill C-233 passed.</h1>
