--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
 		<h1>What have we accomplished so far?</h1>
 		
 		<article>
-			<h2>We deliver C-233 bronchures to Hamilton homes:</h2>
+			<h2>Delivering C-233 bronchures to Hamilton homes:</h2>
 			<p>Currently 1250 have been delivered.</p>
 				<a href="https://docs.google.com/forms/d/e/1FAIpQLSdCK-jsO5aHyPRnLotl2B2710aKwor-knma7SnKfJ-CXAY1aA/viewform">
 	    				<img src="/defend_girls.png">
 				</a>
 		</article>
 		<article>
-			<h2>We collect petitions in support of C-233:</h2>
+			<h2>Collecting petitions in support of C-233:</h2>
 			<p>Currently we have 180 signatures.</p>
 			<a href="https://docs.google.com/forms/d/e/1FAIpQLSdCK-jsO5aHyPRnLotl2B2710aKwor-knma7SnKfJ-CXAY1aA/viewform">
   				<img src="/c-233-petition.png">
