--- a/index.html
+++ b/index.html
@@ -82,13 +82,15 @@
 	<main role="main">
 
 		<article>	
-		<h1>Who are we?111</h1>
-		<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
-		<h1>What do we do?</h1>
-		<p>We advocate for the legal rights of the unborn through spreading information and collecting petitions. Currently our focus is getting bill C-233 passed.</p>
-		<h1>What is C-233?</h1>
-		<p><a href="https://www.parl.ca/DocumentViewer/en/43-1/bill/C-233/first-reading">C-233</a> is a bill proposed by <a href="http://www.cathaywagantall.ca/">MP Cathay Wagantall</a> which would make <a href="https://en.wikipedia.org/wiki/Sex-selective_abortion">sex-selective abortion</a> illegal in all provinces of Canada.</p>
-		</article?
+			<h1>Who are we?111</h1>
+			<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
+			
+			<h1>What do we do?</h1>
+			<p>We advocate for the legal rights of the unborn through spreading information and collecting petitions. Currently our focus is getting bill C-233 passed.</p>
+
+			<h1>What is C-233?</h1>
+			<p><a href="https://www.parl.ca/DocumentViewer/en/43-1/bill/C-233/first-reading">C-233</a> is a bill proposed by <a href="http://www.cathaywagantall.ca/">MP Cathay Wagantall</a> which would make <a href="https://en.wikipedia.org/wiki/Sex-selective_abortion">sex-selective abortion</a> illegal in all provinces of Canada.</p>
+		</article>
 			
 		<article>
 			<h2>We deliver C-233 bronchures to Hamilton homes:</h2>
