--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
 		
 	article {
    		border-bottom: 2px dotted #999;
- 
 	}
 		
 	img {
@@ -82,7 +81,7 @@
 	<main role="main">
 
 		<article>	
-			<h1>Who are we?111</h1>
+			<h1>Who are we?</h1>
 			<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
 			
 			<h1>What do we do?</h1>
