--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 		<a href="https://www.endthekilling.ca/"><img src="ccbr-logo.png"></a>
 		<p>The Canadian Centre for Bio-Ethical Reform is an educational human rights organization dedicated to speaking out on behalf of the youngest and most vulnerable members of the human family.</p>
 
-		<a href="https://www.facebook.com/hamiltonagainstabortion/">Hamilton Against Abortion</a>
-		<a href="https://www.facebook.com/hamiltonagainstabortion/"><img src="end_the_killing.jpg"></a>
+		<a href="https://www.facebook.com/pg/hamiltonagainstabortion/events/?ref=page_internal">Hamilton Against Abortion</a>
+		<a href="https://www.facebook.com/pg/hamiltonagainstabortion/events/?ref=page_internal"><img src="end_the_killing.jpg"></a>
 		<p>Hamilton Against Abortion (HAA) is a grassroots movement dedicated to educating local individuals on the realities of abortion. We do this by equipping the Hamilton Region on how to defend the pro-life position and by taking the message to the streets. We use abortion victim imagery along with other resources, and unmask the truth of abortion to the general public.</p>
 		
 		<a href="https://hamiltonrighttolife.org/">Hamilton Right to Life</a>
